--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "deepmerge": "^3.2.0",
     "gatsby": "^2.3.3",
+    "highcharts": "^7.0.3",
+    "highcharts-react-official": "^2.1.3",
+    "node-line-reader": "^0.0.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-highcharts": "^16.0.2",
+    "react-input-range": "^1.3.0",
+    "recharts": "^1.5.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
